# galario

./: CMakeLists.txt  pyproject.toml
.github/workflows/: python-publish.yml  unit-tests.yml
docs/: conf.py
python/: CMakeLists.txt  libcommon.pyx  utils.py
src/: CMakeLists.txt
